# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../tools/impeller.gni")

impeller_component("egl") {
  sources = [
    "config.cc",
    "config.h",
    "context.cc",
    "context.h",
    "display.cc",
    "display.h",
    "egl.cc",
    "egl.h",
    "image.cc",
    "image.h",
    "surface.cc",
    "surface.h",
  ]

  deps = [
    "../../base",
    "//flutter/fml",
  ]

  libs = []
  if (is_android) {
    # egl::Fence wraps EGL_ANDROID_native_fence_sync and produces sync file
    # descriptors; it is Android only (and `fml::UniqueFD` is an fd only on
    # POSIX). Nothing outside Android references it, so keep it gated to avoid
    # breaking host builds that lack fd-based EGL.
    sources += [
      "fence.cc",
      "fence.h",
    ]
    libs = [ "EGL" ]
  }
}
